Initialize Terraform config CloudFront + S3 origin
* Create a simple Terraform configuration for CloudFront with S3 origin
* Add docker-compose.ci.yml and scripts/infra for running infrastructure
    updates
* Add infrastructure deployment documentation

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,12 @@ typings/
 
 # next.js build output
 .next
+
+# Compiled Terraform files
+*.tfstate
+*.tfstate.backup
+*.tfvars
+*.tfplan
+
+# Terraform module directory
+.terraform/
