Disable build deploy step
To be re-enabled as part of #4.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ scripts:
   - yarn test -- --coverage --coverage-paths src/**/*.js
   - codecov
   - yarn run build
-after_success:
-  - yarn run semantic-release
+#after_success:
+#  - yarn run semantic-release
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
