--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,5 +1,9 @@
 version: '3'
 services:
+  taui:
+    environment:
+      - AWS_ACCESS_KEY_ID
+      - AWS_SECRET_ACCESS_KEY
   terraform:
     image: quay.io/azavea/terraform:0.11.11
     volumes:
