Instruct Travis to deploy verbosely
In order to debug failing deployments, instruct Travis to log in debug
mode.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
 deploy:
   - provider: script
     skip_cleanup: true
-    script: ENV=staging scripts/cipublish
+    script: ENV=staging ECHOLOCATOR_DEBUG=true scripts/cipublish
     on:
       repo: azavea/echo-locator
       branch: feature/jfc/mastarm-deployment
