Mount entire taui directory into Docker guest
Instead of only mounting 'taui/src/' into the Taui container, mount
the entire 'taui' directory. This allows assets and other directories
to be passed between the host and the guest.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   taui:
     build: ./taui
     volumes:
-      - ./taui/src:/usr/local/src/src
+      - ./taui:/usr/local/src
     working_dir: /usr/local/src
     ports:
       - "9966:9966"
