--- a/taui/package.json
+++ b/taui/package.json
@@ -10,7 +10,7 @@
     "prestart": "yarn",
     "pretest": "yarn",
     "semantic-release": "semantic-release",
-    "start": "mastarm build --serve",
+    "start": "mastarm build --serve --watch",
     "test": "mastarm lint src && mastarm build"
   },
   "repository": {
