--- a/taui/configurations/default/settings.yml
+++ b/taui/configurations/default/settings.yml
@@ -2,6 +2,7 @@ cloudfront: EJKZ46R7IC1BB
 entries:
   - src/index.js:assets/index.js
   - src/index.css:assets/index.css
+  - src/BHAlogo.png:assets/BHAlogo.png
 env: development
 flyle: true
 s3bucket: taui
