--- a/taui/Dockerfile
+++ b/taui/Dockerfile
@@ -1,5 +1,9 @@
 FROM node:8-slim
 
+RUN set -ex; \
+  apt-get update && \
+        apt-get install -y git
+
 COPY . /usr/local/src
 WORKDIR /usr/local/src
 
