--- a/taui/package.json
+++ b/taui/package.json
@@ -28,12 +28,13 @@
   },
   "homepage": "https://github.com/azavea/echo-locator",
   "dependencies": {
-    "aws-amplify": "^1.1.19",
-    "aws-amplify-react": "^2.3.0",
     "@conveyal/gridualizer": "^2.1.0",
     "@conveyal/lonlat": "^1.4.0",
     "@conveyal/woonerf": "^4.1.0",
     "@mapbox/polyline": "^1.0.0",
+    "aws-amplify": "~1.1.19",
+    "aws-amplify-react": "~2.1.7",
+    "babel-plugin-css-modules-transform": "^1.6.2",
     "d3-scale": "^2.1.0",
     "date-fns": "^1.29.0",
     "debug": "^4.1.0",
@@ -41,7 +42,7 @@
     "jsolines": "^2.1.0",
     "leaflet": "^1.3.4",
     "lodash": "^4.17.10",
-    "mastarm": "^4.4.2",
+    "mastarm": "https://github.com/flibbertigibbet/mastarm.git#feature/work",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-leaflet": "^1.9.1",
