Install Amplify CLI on container

--- a/taui/Dockerfile
+++ b/taui/Dockerfile
@@ -1,8 +1,12 @@
 FROM node:8-slim
 
+# Install git for packages on GitHub
 RUN set -ex; \
   apt-get update && \
         apt-get install -y git
+
+# Install Amplify CLI globally
+npm install -g @aws-amplify/cli
 
 COPY . /usr/local/src
 WORKDIR /usr/local/src
