--- a/taui/package.json
+++ b/taui/package.json
@@ -4,14 +4,14 @@
   "main": "src/index.js",
   "scripts": {
     "build": "mastarm build",
-    "fixlint": "mastarm lint --fix src",
+    "fixlint": "mastarm lint --ignore-path src/.eslintignore --fix src",
     "deploy": "mastarm deploy",
     "predeploy": "yarn",
     "prestart": "yarn",
     "pretest": "yarn",
     "semantic-release": "semantic-release",
     "start": "mastarm build --serve --watch",
-    "test": "mastarm lint src && mastarm build"
+    "test": "mastarm lint src --ignore-path src/.eslintignore && mastarm build"
   },
   "repository": {
     "type": "git",
