--- a/taui/package.json
+++ b/taui/package.json
@@ -28,36 +28,36 @@
   },
   "homepage": "https://github.com/azavea/echo-locator",
   "dependencies": {
-    "@conveyal/gridualizer": "^2.1.0",
-    "@conveyal/lonlat": "^1.4.0",
-    "@conveyal/woonerf": "^4.1.0",
-    "@mapbox/polyline": "^1.0.0",
+    "@conveyal/gridualizer": "~2.1.0",
+    "@conveyal/lonlat": "~1.4.0",
+    "@conveyal/woonerf": "~4.1.0",
+    "@mapbox/polyline": "~1.0.0",
     "aws-amplify": "~1.1.19",
     "aws-amplify-react": "~2.1.7",
-    "babel-plugin-css-modules-transform": "^1.6.2",
-    "d3-scale": "^2.1.0",
-    "date-fns": "^1.29.0",
-    "debug": "^4.1.0",
-    "isomorphic-fetch": "^2.2.1",
-    "jsolines": "^2.1.0",
-    "leaflet": "^1.3.4",
-    "lodash": "^4.17.10",
+    "babel-plugin-css-modules-transform": "~1.6.2",
+    "d3-scale": "~2.2.2",
+    "date-fns": "~1.29.0",
+    "debug": "~4.1.0",
+    "isomorphic-fetch": "~2.2.1",
+    "jsolines": "~2.1.0",
+    "leaflet": "~1.3.4",
+    "lodash": "~4.17.11",
     "mastarm": "https://github.com/flibbertigibbet/mastarm.git#feature/work",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-leaflet": "^1.9.1",
-    "react-leaflet-vectorgrid": "^2.1.3",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-select": "^1.2.1",
-    "react-select-fast-filter-options": "^0.2.3",
-    "react-virtualized-select": "^3.1.3",
-    "redux": "^4.0.1",
-    "redux-actions": "^2.6.4",
+    "react": "~16.8.1",
+    "react-dom": "~16.8.1",
+    "react-leaflet": "~1.9.1",
+    "react-leaflet-vectorgrid": "~2.1.3",
+    "react-redux": "~5.0.7",
+    "react-router": "~4.3.1",
+    "react-router-dom": "~4.3.1",
+    "react-select": "~1.2.1",
+    "react-select-fast-filter-options": "~0.2.3",
+    "react-virtualized-select": "~3.1.3",
+    "redux": "~4.0.1",
+    "redux-actions": "~2.6.4",
     "redux-mock-store": "1.5.3",
-    "reselect": "^4.0.0",
-    "semantic-release": "^15.12.4"
+    "reselect": "~4.0.0",
+    "semantic-release": "~15.13.3"
   },
   "standard": {
     "parser": "babel-eslint"
