Include configuration JSON as file
To fix configuration not loading from /config.json on staging.

--- a/taui/configurations/default/settings.yml
+++ b/taui/configurations/default/settings.yml
@@ -3,6 +3,7 @@ entries:
   - src/index.js:assets/index.js
   - src/index.css:assets/index.css
   - src/BHAlogo.png:assets/BHAlogo.png
+  - config.json:assets/config.json
 env: development
 flyle: true
 s3bucket: taui
