--- a/taui/configurations/default/settings.yml
+++ b/taui/configurations/default/settings.yml
@@ -4,6 +4,8 @@ entries:
   - src/index.css:assets/index.css
   - src/BHAlogo.png:assets/BHAlogo.png
   - config.json:assets/config.json
+  - neighborhoods.json:assets/neighborhoods.json
+  - neighborhood_bounds.json:assets/neighborhood_bounds.json
 env: development
 flyle: true
 s3bucket: taui
