Persist Amplify resources and configure production environment
Move Amplify resources into a dedicated deployment directory,
'./deployment/amplify', and create a production environment.
In addition, update scripts and docs to reflect the altered
Amplify deployment workflow.

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -17,3 +17,10 @@ services:
       - ECHOLOCATOR_SITE_BUCKET=${ECHOLOCATOR_SITE_BUCKET:-echo-locator-staging-site-us-east-1}
     working_dir: /usr/local/src
     entrypoint: bash
+  amplify:
+    build: ./deployment/amplify
+    volumes:
+      - ./deployment/amplify:/usr/local/src
+      - $HOME/.aws:/root/.aws:ro
+    working_dir: /usr/local/src
+    entrypoint: bash
