Pin Amplify CLI version and test prod deploys
Use the version of the CLI that was used to generate the project,
and test to make sure production deploys work.

--- a/deployment/amplify/Dockerfile
+++ b/deployment/amplify/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:8-slim
 
 # Install Amplify CLI globally
-RUN npm install -g @aws-amplify/cli
+RUN npm install -g @aws-amplify/cli@0.1.45
 
 COPY . /usr/local/src
 WORKDIR /usr/local/src
