Save amplify config file to amplify deployment directory
Update the source directive in the Amplify project config to make
sure that aws-exports.js gets saved to the root deployment directory.

--- a/deployment/amplify/staging/amplify/.config/project-config.json
+++ b/deployment/amplify/staging/amplify/.config/project-config.json
@@ -8,7 +8,7 @@
     "javascript": {
         "framework": "react",
         "config": {
-            "SourceDir": "src",
+            "SourceDir": ".",
             "DistributionDir": "assets",
             "BuildCommand": "yarn build",
             "StartCommand": "yarn start"
