Make sure Taui can access aws-exports.js in Travis
Tests need to be able to access aws-exports.js in order to pass, so
make sure the staging config is copied into the Taui source before
running tests in Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ env:
     - PATH=$HOME/.local/bin:$PATH
 before_install:
   - pip install --user awscli==1.16.*
+  # Make sure that Taui can access the staging Amplify config for testing
+  - cp deployment/amplify/staging/aws-exports.js taui/src/aws-exports.js
 script:
   - ./scripts/test
 deploy:
