--- a/deployment/amplify/production/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
+++ b/deployment/amplify/production/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
@@ -117,11 +117,10 @@
 					"userpoolClientLambdaRole": "cognitoEcholocatorProduction_userpoolclient_lambda_role",
 					"userpoolClientLogPolicy": "cognitoEcholocatorProduction_userpoolclient_lambda_log_policy",
 					"userpoolClientLambdaPolicy": "cognitoEcholocatorProduction_userpoolclient_lambda_iam_policy",
-					"userpoolClientSetAttributes": true,
+					"userpoolClientSetAttributes": false,
 					"useDefault": "manual",
 					"authSelections": "identityPoolAndUserPool",
 					"resourceName": "cognitoEcholocatorProduction",
-					"userpoolClientWriteAttributes": "email",
 					"unAuthRoleName": "src-20190214172616-unauthRole",
 					"authRoleName": "src-20190214172616-authRole",
 					"unAuthRoleArn": "arn:aws:iam::322268938932:role/src-20190214172616-unauthRole",
