Add account list
Create, list, and delete S3 files on account search page.

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -44,4 +44,6 @@ Search:
   Title: Search
   Name: Name of Head of Household
   Voucher: Voucher Number
-  Action: Go
+  Action: Search
+CreateAccount: Create New Account
+Delete: Delete
