Update CloudFront distro for staging in Taui
As part of moving the staging site to a new AWS account, make sure that
the CloudFront distro ID gets updated in the Taui settings file for
the staging environment.

--- a/taui/configurations/staging/settings.yml
+++ b/taui/configurations/staging/settings.yml
@@ -1,4 +1,4 @@
-cloudfront: E2CSIKFLWDFPC9
+cloudfront: E3A0YNQDZRFX9J
 entries:
   - src/index.js:assets/index.js
   - src/index.css:assets/index.css
