--- a/taui/configurations/staging/settings.yml
+++ b/taui/configurations/staging/settings.yml
@@ -2,6 +2,9 @@ cloudfront: E3A0YNQDZRFX9J
 entries:
   - src/index.js:assets/index.js
   - src/BHAlogo.png:assets/BHAlogo.png
+  - config.json:assets/config.json
+  - neighborhoods.json:assets/neighborhoods.json
+  - neighborhood_bounds.json:assets/neighborhood_bounds.json
 env: staging
 flyle: true
 s3bucket: echo-locator-staging-site-us-east-1
