--- a/taui/package.json
+++ b/taui/package.json
@@ -29,26 +29,31 @@
   },
   "homepage": "https://github.com/azavea/echo-locator",
   "dependencies": {
+    "@aws-amplify/api": "~1.0.26",
+    "@aws-amplify/auth": "~1.2.15",
+    "@aws-amplify/core": "~1.0.22",
+    "@aws-amplify/storage": "~1.0.25",
+    "@aws-amplify/ui": "~1.0.15",
+    "@aws-amplify/xr": "~0.1.12",
     "@conveyal/gridualizer": "~2.1.0",
     "@conveyal/lonlat": "~1.4.0",
     "@conveyal/woonerf": "~4.1.0",
     "@mapbox/polyline": "~1.0.0",
-    "aws-amplify": "~1.1.19",
-    "aws-amplify-react": "~2.1.7",
+    "aws-amplify-react": "~2.3.0",
     "babel-plugin-css-modules-transform": "~1.6.2",
     "d3-scale": "~2.2.2",
-    "date-fns": "~1.29.0",
-    "debug": "~4.1.0",
+    "date-fns": "~1.30.1",
+    "debug": "~4.1.1",
     "isomorphic-fetch": "~2.2.1",
     "jsolines": "~2.1.0",
     "leaflet": "~1.3.4",
     "lodash": "~4.17.11",
     "mastarm": "https://github.com/azavea/mastarm.git#dev",
-    "react": "~16.8.1",
-    "react-dom": "~16.8.1",
+    "react": "~16.8.3",
+    "react-dom": "~16.8.3",
     "react-leaflet": "~1.9.1",
     "react-leaflet-vectorgrid": "~2.1.3",
-    "react-redux": "~5.0.7",
+    "react-redux": "~5.1.1",
     "react-router": "~4.3.1",
     "react-router-dom": "~4.3.1",
     "react-select": "~1.2.1",
