--- a/deployment/amplify/production/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
+++ b/deployment/amplify/production/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
@@ -78,66 +78,67 @@
 				}
 			}
 		},
-		"authcognitoEcholocatorProduction": {
+		"authecholocatorCognitoProduction": {
 			"Type": "AWS::CloudFormation::Stack",
 			"Properties": {
-				"TemplateURL": "https://s3.amazonaws.com/src-20190214172616-deployment/amplify-cfn-templates/auth/cognitoEcholocatorProduction-cloudformation-template.yml",
+				"TemplateURL": "https://s3.amazonaws.com/prod-20190227190911-deployment/amplify-cfn-templates/auth/echolocatorCognitoProduction-cloudformation-template.yml",
 				"Parameters": {
 					"identityPoolName": "echolocatorIdentityPoolProduction",
 					"allowUnauthenticatedIdentities": false,
 					"thirdPartyAuth": false,
-					"lambdaLogPolicy": "cognitoEcholocatorProduction_lambda_log_policy",
-					"openIdLambdaRoleName": "cognitoEcholocatorProduction_openid_lambda_role",
-					"openIdRolePolicy": "cognitoEcholocatorProduction_openid_pass_role_policy",
-					"openIdLambdaIAMPolicy": "cognitoEcholocatorProduction_openid_lambda_iam_policy",
-					"openIdLogPolicy": "cognitoEcholocatorProduction_openid_lambda_log_policy",
-					"userPoolName": "cognitoUserPoolProduction",
+					"lambdaLogPolicy": "echolocatorCognitoProduction_lambda_log_policy",
+					"openIdLambdaRoleName": "echolocatorCognitoProduction_openid_lambda_role",
+					"openIdRolePolicy": "echolocatorCognitoProduction_openid_pass_role_policy",
+					"openIdLambdaIAMPolicy": "echolocatorCognitoProduction_openid_lambda_iam_policy",
+					"openIdLogPolicy": "echolocatorCognitoProduction_openid_lambda_log_policy",
+					"userPoolName": "echolocatorUserPoolProduction",
 					"autoVerifiedAttributes": "email",
 					"mfaConfiguration": "OFF",
 					"mfaTypes": "SMS Text Message",
-					"roleName": "cognitoEcholocatorProduction_sns-role",
-					"roleExternalId": "cognitoEcholocatorProduction_role_external_id",
-					"policyName": "cognitoEcholocatorProduction-sns-policy",
+					"roleName": "echolocatorCognitoProduction_sns-role",
+					"roleExternalId": "echolocatorCognitoProduction_role_external_id",
+					"policyName": "echolocatorCognitoProduction-sns-policy",
 					"smsAuthenticationMessage": "Your authentication code is {####}",
 					"smsVerificationMessage": "Your verification code is {####}",
 					"emailVerificationSubject": "Your verification code",
 					"emailVerificationMessage": "Your verification code is {####}",
-					"defaultPasswordPolicy": true,
+					"defaultPasswordPolicy": false,
 					"passwordPolicyMinLength": 8,
-					"passwordPolicyCharacters": "",
+					"passwordPolicyCharacters": "Requires Lowercase,Requires Uppercase,Requires Numbers,Requires Symbols",
 					"requiredAttributes": "email",
-					"userpoolClientName": "cognitoEcholocatorProduction_app_client",
+					"userpoolClientName": "echolocatorCognitoProduction_app_client",
 					"userpoolClientGenerateSecret": true,
-					"userpoolClientRefreshTokenValidity": 30,
-					"userpoolClientReadAttributes": "email",
-					"mfaLambdaRole": "cognitoEcholocatorProduction_totp_lambda_role",
-					"mfaLambdaLogPolicy": "cognitoEcholocatorProduction_totp_lambda_log_policy",
-					"mfaPassRolePolicy": "cognitoEcholocatorProduction_totp_pass_role_policy",
-					"mfaLambdaIAMPolicy": "cognitoEcholocatorProduction_totp_lambda_iam_policy",
-					"userpoolClientLambdaRole": "cognitoEcholocatorProduction_userpoolclient_lambda_role",
-					"userpoolClientLogPolicy": "cognitoEcholocatorProduction_userpoolclient_lambda_log_policy",
-					"userpoolClientLambdaPolicy": "cognitoEcholocatorProduction_userpoolclient_lambda_iam_policy",
-					"userpoolClientSetAttributes": false,
+					"userpoolClientRefreshTokenValidity": "90",
+					"userpoolClientReadAttributes": "email,phone_number,updated_at,email_verified,phone_number_verified",
+					"mfaLambdaRole": "echolocatorCognitoProduction_totp_lambda_role",
+					"mfaLambdaLogPolicy": "echolocatorCognitoProduction_totp_lambda_log_policy",
+					"mfaPassRolePolicy": "echolocatorCognitoProduction_totp_pass_role_policy",
+					"mfaLambdaIAMPolicy": "echolocatorCognitoProduction_totp_lambda_iam_policy",
+					"userpoolClientLambdaRole": "echolocatorCognitoProduction_userpoolclient_lambda_role",
+					"userpoolClientLogPolicy": "echolocatorCognitoProduction_userpoolclient_lambda_log_policy",
+					"userpoolClientLambdaPolicy": "echolocatorCognitoProduction_userpoolclient_lambda_iam_policy",
+					"userpoolClientSetAttributes": true,
 					"useDefault": "manual",
 					"authSelections": "identityPoolAndUserPool",
-					"resourceName": "cognitoEcholocatorProduction",
-					"unAuthRoleName": "src-20190214172616-unauthRole",
-					"authRoleName": "src-20190214172616-authRole",
-					"unAuthRoleArn": "arn:aws:iam::322268938932:role/src-20190214172616-unauthRole",
-					"authRoleArn": "arn:aws:iam::322268938932:role/src-20190214172616-authRole"
+					"resourceName": "echolocatorCognitoProduction",
+					"userpoolClientWriteAttributes": "phone_number,updated_at,email",
+					"unAuthRoleName": "prod-20190227190911-unauthRole",
+					"authRoleName": "prod-20190227190911-authRole",
+					"unAuthRoleArn": "arn:aws:iam::322268938932:role/prod-20190227190911-unauthRole",
+					"authRoleArn": "arn:aws:iam::322268938932:role/prod-20190227190911-authRole"
 				}
 			}
 		},
-		"storageecholocatorContentProduction": {
+		"storageecholocatorUserDataProduction": {
 			"Type": "AWS::CloudFormation::Stack",
 			"Properties": {
-				"TemplateURL": "https://s3.amazonaws.com/src-20190214172616-deployment/amplify-cfn-templates/storage/s3-cloudformation-template.json",
+				"TemplateURL": "https://s3.amazonaws.com/prod-20190227190911-deployment/amplify-cfn-templates/storage/s3-cloudformation-template.json",
 				"Parameters": {
-					"bucketName": "echolocator-production-data-us-east-1",
-					"authPolicyName": "s3_amplify_dd23be3a",
-					"unauthPolicyName": "s3_amplify_dd23be3a",
-					"authRoleName": "src-20190214172616-authRole",
-					"unauthRoleName": "src-20190214172616-unauthRole",
+					"bucketName": "echo-locator-production-user-data-us-east-1",
+					"authPolicyName": "s3_amplify_8a7a0256",
+					"unauthPolicyName": "s3_amplify_8a7a0256",
+					"authRoleName": "prod-20190227190911-authRole",
+					"unauthRoleName": "prod-20190227190911-unauthRole",
 					"authPermissions": "rw",
 					"unauthPermissions": ""
 				}
