Add Sass folder. Style app header.

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -33,7 +33,7 @@ Strings:
   HighlightAreaAccessibleWithin: Show the area accessible within
   Welcome: Search for your address above or click on the map to get started.
 Slower: slower
-Title: ECHO Locator
+Title: BHA ECHOLocator
 Units:
   Minutes: minutes
   Mins: min
