--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -41,10 +41,8 @@ Agency: Boston Housing Authority
 SignIn:
   Greeting: At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
 Accounts:
-  Title: Search
+  Title: Accounts
   Name: Name of Head of Household
   Voucher: Voucher Number
   Search: Search
-  Create: Create New Account
-  Delete: Delete
-  Select: Select
+  Create: Create new account
