--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -56,6 +56,7 @@ Profile:
   Cancel: Cancel
   Delete: Delete
   Destinations: Frequent destinations
+  Primary: Primary
   Purpose: Purpose
   Rooms: Number of rooms in voucher
   HasCar: Will have a car
