--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -54,7 +54,7 @@ Accounts:
 Profile:
   AddAddress: Add another destination
   DeleteAddress: Delete this address
-  DeletePrimaryAddressError: Cannot delete primary address. Set another address as the primary first.
+  DeletePrimaryAddressError: Cannot delete primary destination. Set another as the primary first.
   Address: Address
   Cancel: Cancel
   Delete: Delete
