Unset profile and redirect on profile deletion

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -58,12 +58,14 @@ Profile:
   Address: Address
   Cancel: Cancel
   Delete: Delete
+  DeleteProfileError: Failed to delete profile. Please try again.
   Destinations: Frequent destinations
   Primary: Primary
   Purpose: Purpose
   Rooms: Number of rooms in voucher
   HasCar: Will have a car
   Go: Go
+  SaveError: Failed to save profile. Please try again.
   Title: Profile
 TripPurpose:
   Daycare: Day care
