Refactor search and profile key
Store profiles keyed by voucher number alone.
Only search on voucher number.
Prompt to create if voucher not found, otherwise go directly to profile.
Use exact match.

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -46,11 +46,15 @@ Header:
   New: New
   Edit: Edit
 Accounts:
-  Title: Accounts
+  Create: Create new profile
+  CreateError: Failed to create profile. Please try again.
   Name: Name of Head of Household
-  Voucher: Voucher Number
   Search: Search
-  Create: Create new account
+  SearchError: Failed to search profiles. Please try again.
+  SelectError: Failed to set profile. Please try again.
+  NoResults: No profile found for that voucher number. Create new profile now?
+  Title: Profiles
+  Voucher: Voucher Number
 Profile:
   AddAddress: Add another destination
   DeleteAddress: Delete this address
@@ -65,6 +69,7 @@ Profile:
   Rooms: Number of rooms in voucher
   HasVehicle: Will have a car
   Go: Go
+  NameRequired: Please enter a name for the head of household.
   SaveError: Failed to save profile. Please try again.
   Title: Profile
 TripPurpose:
