--- a/taui/package.json
+++ b/taui/package.json
@@ -4,15 +4,18 @@
   "main": "src/index.js",
   "scripts": {
     "build": "mastarm build",
-    "fixlint": "mastarm lint --ignore-path src/.eslintignore --fix src",
+    "fixlint-js": "mastarm lint-js --ignore-path src/.eslintignore --fix src",
+    "fixlint-styles": "mastarm lint-styles --fix",
     "deploy": "mastarm deploy",
-    "lint": "mastarm lint src --ignore-path src/.eslintignore && mastarm lint-messages",
+    "lint": "mastarm lint-js src --ignore-path src/.eslintignore; mastarm lint-styles --config .stylelintrc; mastarm lint-messages",
+    "lint-js": "mastarm lint-js src --ignore-path src/.eslintignore",
+    "lint-styles": "mastarm lint-styles",
     "predeploy": "yarn",
     "prestart": "yarn",
     "pretest": "yarn",
     "semantic-release": "semantic-release",
     "start": "mastarm build --serve --watch",
-    "test": "mastarm lint src --ignore-path src/.eslintignore && mastarm build"
+    "test": "mastarm lint-js src --ignore-path src/.eslintignore && mastarm lint-styles && mastarm build"
   },
   "repository": {
     "type": "git",
@@ -47,7 +50,6 @@
     "jsolines": "~2.1.0",
     "leaflet": "~1.3.4",
     "lodash": "~4.17.11",
-    "mastarm": "https://github.com/azavea/mastarm.git#dev",
     "react": "~16.8.3",
     "react-dom": "~16.8.3",
     "react-leaflet": "~1.9.1",
@@ -64,7 +66,10 @@
     "reselect": "~4.0.0"
   },
   "devDependencies": {
-    "semantic-release": "~15.13.3"
+    "mastarm": "https://github.com/azavea/mastarm.git#dev",
+    "semantic-release": "~15.13.3",
+    "stylelint": "^9.10.1",
+    "stylelint-azavea": "https://github.com/azavea/stylelint-azavea#develop"
   },
   "standard": {
     "parser": "babel-eslint"
