--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -41,10 +41,13 @@ Units:
   Mins: min
 Agency: Boston Housing Authority
 SignIn:
+  Anonymous: Continue without an account
+  AnonymousExplanation: Don't have an account?
   Greeting: At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
 Header:
   New: New
   Edit: Edit
+  SignIn: Sign In
 Accounts:
   Create: Create new profile
   CreateError: Failed to create profile. Please try again.
