Add select input for network
Add control for time of day.

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -24,6 +24,7 @@ Geocoding:
 Log:
   Title: Log
 Map:
+  SelectNetwork: Set time of day
   SetLocationPopup:
     SetStart: Set start
     SetEnd: Set end
