--- a/taui/package.json
+++ b/taui/package.json
@@ -15,7 +15,7 @@
     "pretest": "yarn",
     "semantic-release": "semantic-release",
     "start": "mastarm build --serve --watch",
-    "test": "mastarm lint-js src --ignore-path src/.eslintignore && mastarm lint-styles && mastarm build"
+    "test": "mastarm lint-js src --ignore-path src/.eslintignore && mastarm build"
   },
   "repository": {
     "type": "git",
