Add page-not-found message
Handle unmatched routes in the React router.

Closes #60.

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -29,6 +29,7 @@ Map:
     SetStart: Set start
     SetEnd: Set end
     ClearMarkers: Clear markers
+PageNotFound: Oops! There is no page at
 Strings:
   ApplicationReady: Application is ready!
   SearchForStartAddress: Start location
