--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -52,7 +52,7 @@ Header:
 Accounts:
   Create: Create new profile
   CreateError: Failed to create profile. Please try again.
-  InvalidVoucherNumber: Voucher number should be eight digits, or two letters followed six digits.
+  InvalidVoucherNumber: Voucher number should be eight digits, or two letters followed by six digits.
   MissingVoucherNumber: Enter a voucher number to create a profile.
   Name: Name of Head of Household
   Search: Search
