--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -29,6 +29,9 @@ Map:
     SetStart: Set start
     SetEnd: Set end
     ClearMarkers: Clear markers
+Dock:
+  GoPreviousPage: Go back
+  GoNextPage: Show more
 NeighborhoodInfo:
   Affordability: Affordability
   Education: Education
