Weight neighborhoods by both travel time and affordability
Also add values to sidebar cards.
Closes #72.

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -33,8 +33,9 @@ Dock:
   GoPreviousPage: Go back
   GoNextPage: Show more
 NeighborhoodInfo:
-  Affordability: Affordability
   Education: Education
+  RentDiff: Rent difference
+  Score: Score
 PageNotFound: Oops! There is no page at
 RouteCard:
   MarkerLink: Show neighborhood on map
