Add navigation to neighborhood details
Also update react router to v5.

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -30,6 +30,7 @@ Map:
     SetEnd: Set end
     ClearMarkers: Clear markers
 Dock:
+  GoBackFromDetails: Back to list
   GoPreviousPage: Go back
   GoNextPage: Show more
 NeighborhoodInfo:
