--- a/taui/package.json
+++ b/taui/package.json
@@ -50,6 +50,8 @@
     "jsolines": "~2.1.0",
     "leaflet": "~1.3.4",
     "lodash": "~4.17.11",
+    "logrocket": "~0.6.19",
+    "logrocket-react": "~3.0.0",
     "react": "~16.8.3",
     "react-dom": "~16.8.3",
     "react-leaflet": "~1.9.1",
