Link to Google Maps from details with zip code as search term

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -33,6 +33,8 @@ Dock:
   GoBackFromDetails: Back to list
   GoPreviousPage: Go back
   GoNextPage: Show more
+NeighborhoodDetails:
+  GoogleMapsLink: See on Google Maps
 NeighborhoodInfo:
   Education: Education
   RentDiff: Rent difference
