Show no results message on sidebar
Particularly useful if there are no favorites.

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -34,6 +34,7 @@ Dock:
   GoBackFromDetails: Back to list
   GoPreviousPage: Go back
   GoNextPage: Show more
+  NoResults: No results
   Recommendations: Recommendations
   ShowAllButton: All
   ShowSavedButton: Saved
