--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -39,7 +39,9 @@ Dock:
   ShowAllButton: All
   ShowSavedButton: Saved
 NeighborhoodDetails:
+  FromOrigin: from
   GoogleMapsLink: See on Google Maps
+  ModeSummary: via
 NeighborhoodInfo:
   Education: Education
   RentDiff: Rent difference
