Implement driving mode
Estimate travel times using straight-line distance.
Do not show user estimated travel times or transit routes in driving mode.

Closes #71.

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -39,6 +39,7 @@ Dock:
   ShowAllButton: All
   ShowSavedButton: Saved
 NeighborhoodDetails:
+  DriveMode: driving
   FromOrigin: from
   GoogleMapsLink: See on Google Maps
   ModeSummary: via
