Add details to UI

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -46,6 +46,12 @@ NeighborhoodDetails:
 NeighborhoodInfo:
   EducationCategory: Schools
   EducationPercentile: Education percentile
+  HasNoTransitStop: Has no transit stop
+  HasTransitStop: Has transit stop
+  NearPark: Near a park
+  NearRailStation: Near a rail station
+  NearTransit: Near transit stops
+  PercentCollegeGraduates: College graduates
   Population: Population
   Score: Overall score
   ViolentCrime: Violent crime
