--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -31,7 +31,7 @@ Map:
     ClearMarkers: Clear markers
 Dock:
   Favorites: Saved recommendations
-  GoBackFromDetails: Back to list
+  GoBackFromDetails: Back to recommendations
   GoPreviousPage: Go back
   GoNextPage: Show more
   NoResults: No results
