Move route segments to detail view. Consolidate route card.

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -113,7 +113,7 @@ QuintileLabels:
     1: Very affordable
     2: Very affordable
     3: Affordable
-    4: More expensive
+    4: Expensive
     5: Very expensive
   Education:
     1: Excellent
